# Hob

./: .gitignore  Cargo.toml  README.md  server.properties
.github/workflows/: rust.yml
bedrock_protocol/: Cargo.toml
bedrock_protocol/src/: lib.rs  packet.rs
bedrock_protocol/src/packet/: disconnect.rs  handshake_c2s.rs  handshake_s2c.rs  login.rs  play_status.rs  resource_pack_info.rs  resource_pack_response.rs  resource_pack_stack.rs
hob/ecs/: Cargo.toml
hob/ecs/src/: lib.rs
hob/ecs/src/events/: mod.rs  packet_recv.rs  player_join.rs
hob/ecs/src/player/: mod.rs
hob/ecs/src/player/components/: connection.rs  mod.rs
hob/ecs/src/player/systems/: mod.rs  packet_handler.rs
hob/ecs/src/plugin/: mod.rs
hob/ecs/src/world/: mod.rs
hob/ecs/src/world/components/: mod.rs
hob/ecs/src/world/resources/: mod.rs
hob/ecs/src/world/systems/: mod.rs
hob/nbt/: Cargo.toml
hob/nbt/src/: lib.rs  nbt_tag.rs
hob/nbt/src/de/: binary_format.rs  mod.rs
hob/nbt/src/ser/: error.rs  mod.rs
hob/nbt/src/value/: de.rs  mod.rs  ser.rs
hob/nbt/tests/: value.rs
hob/protocol/: Cargo.toml
hob/protocol/src/: decode.rs  encode.rs  lib.rs  macros.rs  packet.rs
hob/protocol/src/packet/: disconnect.rs  handshake.rs  login.rs  network_settings.rs  play_status.rs  resource_pack_info.rs  resource_pack_stack.rs  start_game.rs
hob/server/: Cargo.toml
hob/server/src/: client.rs  connection_client.rs  connection_worker.rs  lib.rs  listener.rs  player_init.rs  player_registry.rs  server.rs
hob/server_repaired/: Cargo.toml
hob/server_repaired/src/: client.rs  connection_client.rs  initial_handler.rs  lib.rs  listener.rs  logging.rs  main.rs  player_init.rs
hob_nbt/: Cargo.toml  README.md
hob_nbt/src/: lib.rs  macros.rs  test.rs
hob_nbt/src/de/: binary_format.rs  mod.rs
hob_nbt/src/ser/: binary_format.rs  mod.rs
hob_nbt/src/value/: de.rs  mod.rs  ser.rs
hob_nbt/tests/: example.rs  leveldat.rs  value.rs
hob_protocol/: Cargo.toml
hob_protocol/src/: decode.rs  encode.rs  jwt.rs  lib.rs  packet.rs
hob_protocol/src/packet/: client_cache_status.rs  disconnect.rs  handshake.rs  handshake_c2s.rs  handshake_s2c.rs  login.rs  network_settings.rs  play_status.rs  request_network_setting.rs  resource_pack_info.rs  resource_pack_response.rs  resource_pack_stack.rs  start_game.rs
hob_server/: Cargo.toml
hob_server/src/: client.rs  lib.rs
proto_bytes/: Cargo.toml
proto_bytes/src/: conditional.rs  lib.rs  test.rs
serde_compound/: Cargo.toml
serde_compound/src/: fx.rs  lib.rs  skip.rs  test.rs  types.rs
serde_nbt/: Cargo.toml
serde_nbt/src/: binary_format.rs  lib.rs  macros.rs  nbt_tag.rs  nbt_types.rs  test.rs  types.rs
serde_nbt/src/compound/: mod.rs
serde_nbt/src/de/: binary_format.rs  error.rs  mod.rs
serde_nbt/src/ser/: binary_format.rs  mod.rs  num_array.rs
serde_nbt/tests/: example.rs  leveldat.rs
src/: main.rs  player.rs  server.rs  tests.rs  utils.rs
src/components/: mod.rs
src/ecs/components/: mod.rs
src/ecs/resources/: mod.rs
src/protocol/: mod.rs
src/protocol/internal/packet/: mod.rs
src/protocol/mcpe/: mod.rs  request_network_setting.rs
src/protocol/mcpe/crypto/: cipher.rs  ecdh.rs  ecdsa.rs  errors.rs  es384.rs  mod.rs  p384.rs
src/protocol/mcpe/packet/: client_cache_status.rs  disconnect.rs  handshake.rs  login.rs  mod.rs  network_settings.rs  play_status.rs  request_network_setting.rs  resource_pack_client_response.rs  resource_pack_stack.rs  resource_packs_info.rs  start_game.rs  start_game_packet.rs
src/protocol/mcpe/packet/handshake/: constants.rs  key_exchange.rs  mod.rs
src/protocol/mcpe/packet/login/: constants.rs  errors.rs  login_verify.rs  mod.rs
src/protocol/mcpe/packet/s_to_c_handshake/: constants.rs  key_exchange.rs  mod.rs
src/protocol/mcpe/transforms/: framer.rs  mod.rs
src/protocol/packet/: mod.rs  play_status.rs  request_network_setting.rs
src/protocol/transforms/: errors.rs  framer.rs
tests/: Cargo.toml
tests/src/: lib.rs
