[package]
name = "hob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hob_server = { path = "./hob/server" }
hob_ecs = { path = "./hob/ecs" }
hob_protocol = { path = "./hob/protocol" }
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.20.1", features = ["full"] }

[workspace]
members = [
    "proto_bytes",
    "hob/nbt",
    "hob/protocol",
    "hob/server",
    "hob/ecs"
]

[workspace.dependencies]
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
hob_protocol = { path = "./hob/protocol" }
hob_nbt = { path = "./hob/nbt" }
hob_server = { path = "./hob/server" }
hob_ecs = { path = "./hob/ecs" }
proto_bytes = { path = "./proto_bytes" }
