[package]
name = "bedrock-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
proto-bytes = { path = "../proto_bytes" }
from-num = "*"
hmac-sha256 = { version = "1.1.6", features = [ "traits010" ] }
flate2 = "1.0.27"
aes = "0.8.3"
ctr = "0.9.2"
rand = "0.8.5"