[package]
name = "serde-nbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-bytes = { path = "../proto_bytes" }
bytes = "1.0.0"
from-num = "*"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "*"
