[package]
name = "hob_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "*"
tokio = { version = "1.20.1", features = ["full"] }

hob_server.workspace = true
hob_protocol.workspace = true
log.workspace = true