[package]
name = "server_repaired"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tokio = { version = "1.20.1", features = ["full"] }
rust-raknet = "0.12.0"
specs = "*"
proto-bytes = { path = "../../proto_bytes" }
hob-protocol = { path = "../protocol" }
log.workspace = true
log4rs = "1.2"